# DialoGraph

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.en.md  README.md  package-lock.json  package.json  rebuild-images.bat  rebuild-images.ps1  retrieval_architecture.md  start-app.bat  start-app.ps1  todo.md
apps/api/: .env.example  Dockerfile  Dockerfile.cuda  README.md  pyproject.toml
apps/api/app/: __init__.py  api.py  db.py  main.py  models.py  schemas.py
apps/api/app/core/: config.py  utils.py
apps/api/app/services/: agent_graph.py  cache_manager.py  chinese_text.py  chunking.py  concept_graph.py  embeddings.py  graph_algorithms.py  graph_judge.py  ingestion.py  ingestion_logs.py  maintenance.py  parsers.py  reranker.py  retrieval.py  runtime_settings.py  storage.py  vector_store.py
apps/api/app/services/quality/: __init__.py  judge.py  policies.py  profiles.py  signals.py
apps/api/tests/: README.md  conftest.py  test_agent_graph.py  test_chinese_support.py  test_chunking.py  test_concept_graph.py  test_embeddings.py  test_enhanced_chunking.py  test_evidence_first_retrieval.py  test_fallback_compat.py  test_graph_algorithms.py  test_graph_judge.py  test_ingestion_batches.py  test_ingestion_logs.py  test_maintenance.py  test_no_fallback_e2e.py  test_p0_consistency.py  test_p0_graph_security.py  test_parsers.py  test_quality_system.py  test_retrieval.py  test_runtime_settings.py
apps/api/tests/archived/: test_p0_consistency.py  test_p0_graph_security.py  test_p0_p1_robustness.py
apps/worker/: .env.example  README.md  pyproject.toml
apps/worker/worker_app/: bootstrap.py  celery_app.py  tasks.py  watcher.py
infra/: README.md  docker-compose.cuda.yml  docker-compose.yml
scripts/: README.md  analyze_chunk_quality.py  cleanup_aliases.py  docker_smoke.py  evaluate_evidence_first_retrieval.py  quality_gate.py  (+9 more)
(+40 files in other folders)
