[project]
name = "course-kg-api"
version = "0.1.0"
description = "FastAPI backend for turning course materials into a searchable knowledge base"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.1",
  "python-multipart>=0.0.19",
  "httpx>=0.28.1",
  "qdrant-client>=1.12.1",
  "langchain>=1.0.0",
  "langgraph>=1.0.0",
  "langchain-openai>=1.0.0",
  "langchain-qdrant>=1.0.0",
  "langsmith>=0.3.0",
  "rank-bm25>=0.2.2",
  "langchain-text-splitters>=0.3.2",
  "pymupdf>=1.24.14",
  "pypdf>=5.1.0",
  "python-pptx>=1.0.2",
  "python-docx>=1.1.2",
  "pillow>=11.0.0",
  "markdown>=3.7",
  "beautifulsoup4>=4.12.3",
  "networkx>=3.4.2",
  "portalocker>=3.0.0"
]

[project.optional-dependencies]
ocr = ["paddleocr>=2.9.1"]
fallback = ["unstructured>=0.16.8"]
rerank = ["sentence-transformers>=3.3.1"]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
  "no_fallback_e2e: requires PostgreSQL, Qdrant, and an OpenAI-compatible model endpoint with fallback disabled",
  "fallback_compat: explicitly enables local fallback paths for compatibility coverage",
]
testpaths = ["tests"]
