[project]
name = "course-kg-worker"
version = "0.1.0"
description = "Celery worker and file watcher for course knowledge base ingestion"
requires-python = ">=3.11"
dependencies = [
  "celery[redis]>=5.4.0",
  "watchdog>=6.0.0",
  "sqlalchemy>=2.0.36",
  "python-dotenv>=1.0.1"
]

[tool.uv]
package = false
